Pegando câmera no lado do cliente

--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,11 @@
     crossorigin="anonymous" defer></script>
   </head>
   <body>
-    <div id="video-container" style="height: 1000px;width: 1000px;"></div>
+    <video 
+      id="video-container"
+      autoplay
+      playsinline
+      style="height: 1000px;width: 1000px;"
+    ></video>
   </body>
 </html>
