--- a/teste.html
+++ b/teste.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Captura de imagens da câmera</title>
-    <script src="teste.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js"
-    crossorigin="anonymous" defer></script>
-  </head>
+    <script src="teste.js" type="module" defer></script>
+ </head>
   <body>
     <video 
       id="video-container"
